<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pickPhoto">


    <ImageView
        android:id="@+id/pickimage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Image"
        android:textAllCaps="false"
        android:backgroundTint="#FF9800"
        android:layout_marginLeft="70dp"
        android:layout_below="@+id/pickimage"/>

    <Button
        android:id="@+id/uploadimagebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickimage"
        android:layout_marginLeft="210dp"
        android:backgroundTint="#EA400B"
        android:text="Upload Image"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/petname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="19dp"
        android:layout_below="@+id/select"
        android:hint="Name" />

    <EditText
        android:id="@+id/petage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="19dp"
        android:layout_below="@+id/petname"
        android:hint="Age" />

    <EditText
        android:id="@+id/petbreeds"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="19dp"
        android:layout_below="@+id/petage"
        android:hint="Breeds" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/forspecies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/petbreeds"
        android:hint="@string/species">

        <AutoCompleteTextView
            android:id="@+id/speciess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/forstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forspecies"
        android:hint="@string/status">

        <AutoCompleteTextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/forgender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forstatus"
        android:hint="@string/gender">

        <AutoCompleteTextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>